<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="find_representatives_button">Find my representatives</string>
    <string name="upcoming_button">Upcoming elections</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="voting_location">Voting Location</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="election_information">Election Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="voter_info_error">Unfortunately, details for this election are unavailable. Please choose a different one</string>
    <string name="state_correspondence">State Correspondence</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="use_location">Use My Location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="representative_search">Representative Search</string>
    <string name="follow_election_button">Follow Election</string>

    <!--DONE: Add necessary string values -->

</resources>
