<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <!-- DONE: Add data binding node -->
    <data>
        <variable
            name="viewmodel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />

        <variable
            name="address"
            type="com.example.android.politicalpreparedness.network.models.Address" />

    </data>

    <!-- DONE: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/representatives_layout">

            <!-- DONE: Add visual styling and content -->
            <TextView
                android:id="@+id/search_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/HeaderTextView"
                android:text="@string/representative_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- DONE: Add data binding value -->
            <!-- DONE: Add visual styling and content -->
            <EditText
                android:id="@+id/address_line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style = "@style/EditText"
                android:autofillHints="testHint"
                android:hint="@string/address_line_1"
                android:inputType="textPostalAddress"
                android:text="@={viewmodel.address.line1}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title" />

            <!-- DONE: Add data binding value -->
            <!-- DONE: Add visual styling and content -->
            <EditText
                android:id="@+id/address_line_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style = "@style/EditText"
                android:autofillHints="testHint"
                android:hint="@string/address_line_2"
                android:inputType="textPostalAddress"
                android:text="@={viewmodel.address.line2}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_1" />

            <!-- DONE: Add data binding value -->
            <!-- DONE: Add visual styling and content -->
            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style = "@style/EditText"
                android:autofillHints="testHint"
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:text="@={viewmodel.address.city}"
                app:layout_constraintEnd_toStartOf="@id/state"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_2" />

            <!-- TODO: Add default values from provided resources  -->
            <!-- DONE: Add data binding value -->
            <!-- DONE: Add visual styling and content -->
            <Spinner
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autofillHints="testHint"
                android:inputType="textPostalAddress"
                app:stateValue="@{viewmodel.address.state}"
                android:entries="@array/states"
                app:layout_constraintBottom_toBottomOf="@id/city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/city"
                app:layout_constraintTop_toTopOf="@id/city" />

            <!-- DONE: Add data binding value -->
            <!-- DONE: Add visual styling and content -->
            <EditText
                android:id="@+id/zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style = "@style/EditText"
                android:autofillHints="testHint"
                android:hint="@string/zip"
                android:inputType="number"
                android:text="@={viewmodel.address.zip}"
                android:maxLength="5"
                app:layout_constraintEnd_toEndOf="@id/city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city" />

            <!-- DONE: Add visual styling and label -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:text="@string/find_representatives_button"
                app:layout_constraintTop_toBottomOf="@id/zip" />

            <!-- DONE: Add visual styling and content -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:text="@string/use_location"
                app:layout_constraintTop_toBottomOf="@id/button_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/representatives_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/search_form_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <!-- DONE: Add visual styling and content -->
            <TextView
                android:id="@+id/representative_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_representatives"
                style="@style/HeaderTextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginStart="@dimen/margin_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- DONE: Add Representatives RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/representatives_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="@dimen/padding_default"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/representative_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- TODO: Add visual styling and content -->
            <TextView
                android:id="@+id/list_placeholder"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/representative_title"
                motion:visibilityMode="ignore" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>