<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- DONE: Add data binding node for Voter Info ViewModel -->
    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- DONE: Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            android:background="@color/colorHeader"
            app:title="@{viewModel.voterInfo.election.name}"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TODO: Add visual styling -->
        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginTop="@dimen/double_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:text="@{viewModel.voterInfo.election.electionDay.toString()}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <!-- DONE: Add visual styling and content -->
        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderTextView"
            android:text="@string/election_information"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- DONE: Add click binding to open web URL -->
        <!-- DONE: Add visual styling and content -->
        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/VoterInfoLinks"
            android:text="@string/voting_location"
            android:onClick="@{() -> viewModel.loadVotingLocationUrl()}"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- DONE: Add click binding to open web URL -->
        <!-- DONE: Add visual styling and content -->
        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/VoterInfoLinks"
            android:text="@string/ballot_information"
            android:onClick="@{() -> viewModel.loadBallotInformationUrl()}"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!-- DONE: Add visual styling and content -->
        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderTextView"
            android:text="@string/state_correspondence"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- TODO: Add data binding -->
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- DONE: Add button to save election to Room -->
        <Button
            android:id="@+id/follow_election_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Follow Election"
            android:layout_marginBottom="@dimen/double_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>